<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.GetStartedFragment"
        android:background="@drawable/get_started_background_mask_selector"
        >

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="56dp"
            android:layout_marginBottom="@dimen/_minus1sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_get_started_bottom"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/get_started_title"
            style="@style/get_started_title"
            android:layout_marginStart="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_75sdp"
            android:layout_marginEnd="@dimen/_45sdp"
            android:text="@string/get_started_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/get_started_info_text"
            style="@style/get_started_title"
            android:layout_marginStart="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_17sdp"
            android:lineHeight="@dimen/_22ssp"
            android:text="@string/get_started_info_text"
            android:textFontWeight="500"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/get_started_title" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_3sdp"
            android:layout_marginTop="@dimen/_52sdp"
            android:layout_marginEnd="@dimen/_2sdp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/get_started_info_text"
            app:srcCompat="@drawable/ic_get_started_home_image"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/get_started_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:textSize="@dimen/_11ssp"
            android:textFontWeight="500"
            android:lineHeight="@dimen/_27sdp"
            android:layout_marginStart="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_54sdp"
            android:layout_marginEnd="@dimen/_98sdp"
            android:backgroundTint="@color/get_started_button_color"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/get_started_button_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_18sdp"
            android:fontFamily="@font/poppins"
            android:lineHeight="@dimen/_21sdp"
            android:text="@string/get_started_bottom_info_text"
            android:textColor="@color/white"
            android:textFontWeight="400"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/get_started_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>